--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,12 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+#ms_delete-btn {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.ms_bold {
+    font-weight: bold;
+}
